Update README.md: enhance project overview, quick start guide, and configuration details